# DeployAI

./: .editorconfig  .env.example  .gitignore  .npmrc  .pre-commit-config.yaml  .prettierignore  .tool-versions  AGENTS.md  CHANGELOG.md  Makefile  ORCHESTRATOR.md  README.md  eslint.config.mjs  go.work  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  whats-actually-here.md
apps/edge-agent/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/edge-agent/src-tauri/capabilities/: audio-capture.json  default.json  dialog-file-select.json  fs-local-only.json  http-api-only.json  keychain-read-write.json
apps/edge-agent/src-tauri/src/: audio_capture.rs  crypto.rs  device_identity.rs  kill_switch.rs  lib.rs  main.rs  net.rs  signing.rs  transcript.rs  transcription.rs  updater.rs
apps/eval/: package.json  pyproject.toml
apps/eval/src/eval/: __init__.py  judge_cli.py  rules_cli.py
apps/eval/tests/: test_evaluator.py  test_judge_reporter.py
services/_shared/authz/: pyproject.toml
services/_shared/authz/tests/: test_matrix.py
services/_shared/checkpointer/: pyproject.toml
services/_shared/citation/: README.md  pyproject.toml
services/_shared/citation/tests/: test_citation.py
services/_shared/runtime/: pyproject.toml
services/_shared/runtime/tests/: test_prompt_registry.py
services/_shared/tenancy/: README.md  pyproject.toml
services/_shared/tsa/: pyproject.toml
services/_shared/tsa/tests/: test_tsa_batch_sign.py
services/cartographer/: README.md  package.json  pyproject.toml
services/cartographer/migrations/: checkpoints.sql
services/cartographer/src/cartographer/: __init__.py  benchmark.py  degradation_graph.py  extract.py  llm_extract.py  metrics.py  stub_graph.py  triage.py
services/cartographer/tests/: test_benchmark_cli.py  test_benchmark_smoke.py  test_degradation_graph.py  test_extract_branches.py  test_extract_replay.py  test_llm_extract_edges_param.py  test_llm_extract_mock.py  test_stub_graph_memory.py  test_triage.py  test_triage_mixed_100.py
services/cartographer/tests/integration/: test_stub_graph_postgres.py
services/control-plane/: Dockerfile  README.md  package.json  pyproject.toml
services/control-plane/alembic/: env.py
services/control-plane/alembic/versions/: 20260422_0001_canonical_memory_schema.py  20260422_0002_tenant_rls_policies.py  20260423_0010_adjudication_queue_items.py  20260424_0003_schema_proposals_expand.py  20260425_0004_app_tenants_users_scim.py  20260426_0005_app_tenants_dek_nullable_scim.py  20260428_0006_integrations_and_break_glass.py  20260429_0007_sso_pending_system_tenant.py  20260430_0008_canonical_upload_artifact_ref_unique.py  20260501_0009_epic3_ingestion_dedup_and_runs.py  20260502_0011_epic5_phase_solidification.py  20260503_0012_epic10_learning_override_supersession.py  20260504_0013_epic10_private_notes_and_activity.py  20260526_0014_edge_agents.py  20260527_0015_strategist_operator_queues.py  20260528_0016_engagements.py  20260529_0017_engagement_id_on_strategist_queues.py  20260530_0018_engagement_log_entries.py  20260531_0019_engagement_log_author_role.py  20260601_0020_matrix_nodes_edges.py  20260602_0021_engagement_id_on_canonical_memory.py  20260603_0022_drop_engagement_log_entries.py  20260604_0023_matrix_proposals.py  20260605_0024_matrix_insights.py  20260613_0025_tenant_llm_configs.py  20260613_0026_tenant_agent_prompts.py  20260613_0028_tenant_webhooks.py  20260613_0029_tenant_node_types.py  20260613_0030_tenant_member_roles.py  20260613_0031_meeting_webhook_events.py  20260613_0032_email_ingest_events.py  20260613_0033_tenant_llm_secondary.py  20260613_0034_ledger_events.py  20260613_0035_ledger_event_causes.py  20260613_0036_ledger_event_affects.py  20260613_0037_temporal_insights.py  20260613_0038_tenant_llm_daily_budget.py  20260613_0039_matrix_snapshots.py  20260613_0040_oracle_conversations.py  20260613_0041_temporal_insight_snooze.py  (+9 more)
services/control-plane/migrations/schema-proposals/: README.md
services/control-plane/src/control_plane/: __init__.py  bootstrap.py  db.py  exceptions.py  main.py  otel.py
services/control-plane/tests/: conftest.py
services/control-plane/tests/fuzz/: conftest.py  test_cli_production_run.py  test_cross_tenant_harness.py  test_derive_app_url.py  test_report_shape.py
services/control-plane/tests/integration/: conftest.py  test_account_provision_flow.py  test_adjudication_queue.py  test_age_sync.py  test_agent_kenny_dashboard_route.py  test_agent_kenny_v2.py  test_agent_prompts_routes.py  test_audit_decision.py  test_audit_emitter_integration.py  test_audit_routes.py  test_audit_write_routes.py  test_backup_prune_smoke.py  test_backup_smoke.py  test_bulk_accept_proposals.py  test_canonical_memory_schema.py  test_cartographer_extraction_persist.py  test_edge_agent_register.py  test_emails_ingest_routes.py  test_embedder_e2e.py  test_engagement_detail_aggregate.py  test_engagement_events.py  test_engagement_recommendations.py  test_engagement_timeline.py  test_engagements_internal.py  test_epic2_kill_switch_and_break_glass.py  test_event_search.py  test_extract_preview.py  test_golden_smoke.py  test_health_metrics.py  test_ingest_idempotent_dedup.py  test_insight_snooze.py  test_intelligence_scheduler.py  test_kenny_reads_risks_e2e.py  test_learning_override_flow.py  test_ledger_backfill.py  test_ledger_chain_route.py  test_ledger_dual_emit.py  test_ledger_routes.py  test_ledger_schema.py  (+58 more)
services/ingest/: package.json  pyproject.toml
services/ingest/tests/: test_idempotency.py  test_nfr12_backoff.py  test_validators.py
services/master_strategist/: README.md  package.json  pyproject.toml
services/master_strategist/tests/: test_arbitrate.py  test_degradation.py  test_phase_propose.py
services/mcp-server/: Dockerfile  README.md  pyproject.toml
services/mcp-server/tests/: conftest.py  test_auth.py  test_isolation.py  test_resources.py  test_tools.py
services/oracle/: README.md  package.json  pyproject.toml
services/oracle/tests/: test_budget.py  test_posture.py  test_retrieve.py
(+1267 files in other folders)
