[project]
name = "deployai-eval"
version = "0.0.0"
description = "Replay-parity rule + judge evaluators (Epic 4, Stories 4-5/4-6)."
requires-python = ">=3.13,<3.14"
dependencies = [
  "pydantic>=2.9.0",
  "pyyaml>=6.0.0",
]

[dependency-groups]
dev = [
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "ruff>=0.7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eval"]

[tool.hatch.build.targets.sdist]
include = ["src/eval", "pyproject.toml", "tests"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
packages = ["eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
