[project]
name = "deployai-control-plane"
version = "0.0.0"
description = "DeployAI Control Plane service (FR14, FR17, FR64-68). Scaffold only - routes land in later stories."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.136.0",
  "pydantic>=2.9.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "alembic>=1.14.0",
  "uvicorn[standard]>=0.32.0",
  "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
  "ruff>=0.7.4",
  "mypy>=1.13.0",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/control_plane"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "ASYNC", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = ["control_plane"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
