[project]
name = "deployai-control-plane"
version = "0.0.0"
description = "DeployAI Control Plane service (FR14, FR17, FR64-68). Scaffold only - routes land in later stories."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.136.0",
  "pydantic>=2.9.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "alembic>=1.14.0",
  "uvicorn[standard]>=0.32.0",
  "python-dotenv>=1.0.1",
  # Story 1.9 — shared tenancy primitives (TenantScopedSession + RLS glue).
  "deployai-tenancy",
]

[tool.uv.sources]
deployai-tenancy = { path = "../_shared/tenancy", editable = true }

[dependency-groups]
dev = [
  "ruff>=0.7.4",
  "mypy>=1.13.0",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.28.1",
  # Story 1.8 — integration tests spin up a real pgvector container.
  "testcontainers[postgres]>=4.9.0",
  # psycopg (v3) is the sync driver Alembic uses for integration-test
  # migrations. asyncpg can't run multi-statement DDL in one call, which
  # our CREATE FUNCTION / CREATE TRIGGER blocks need.
  "psycopg[binary]>=3.2.0",
  # Story 1.9 — unit tests for deployai_tenancy.session use in-memory sqlite.
  "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/control_plane"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "ASYNC", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = ["control_plane"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Test both the control-plane tree AND the shared tenancy package's unit
# tests in one invocation (Story 1.9). CI `Smoke` → `uv run pytest` covers
# both surfaces without a second invocation or a workspace-level config.
testpaths = ["tests", "../_shared/tenancy/tests/unit"]
pythonpath = ["src"]
# importlib mode is required because both test trees otherwise collide on
# the `tests.unit.test_*` package namespace — control-plane and tenancy
# both have a `tests/unit/__init__.py`. importlib resolves each test file
# independently by path, so duplicate module names are fine.
addopts = "-m 'not integration' --import-mode=importlib"
markers = [
  "integration: requires a reachable Docker daemon (testcontainers)",
]
