[project]
name = "deployai-control-plane"
version = "0.0.0"
description = "DeployAI Control Plane service (FR14, FR17, FR64-68). Scaffold only - routes land in later stories."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.136.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "email-validator>=2.0.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "alembic>=1.14.0",
  "uvicorn[standard]>=0.32.0",
  "python-dotenv>=1.0.1",
  # Story 2-4 — Redis session store + RS256 JWT.
  "redis>=5.0.0",
  "pyjwt[crypto]>=2.9.0",
  "cryptography>=44.0.0",
  # Story 1.9 — shared tenancy primitives (TenantScopedSession + RLS glue).
  "deployai-tenancy",
  "deployai-authz",
  # Story 1.11 — citation envelope Pydantic mirror of @deployai/contracts.
  "deployai-citation",
  "authlib>=1.3.0",
  "httpx>=0.28.0",
  "boto3>=1.35.0",
  "deployai-ingest",
  "prometheus-client>=0.21.0",
  "deployai-runtime",
  "deployai-llm-provider-py",
  "opentelemetry-sdk>=1.28.0",
  "opentelemetry-exporter-otlp-proto-http>=1.28.0",
]

[tool.uv.sources]
deployai-tenancy = { path = "../_shared/tenancy", editable = true }
deployai-authz = { path = "../_shared/authz", editable = true }
deployai-citation = { path = "../_shared/citation", editable = true }
deployai-ingest = { path = "../ingest", editable = true }
deployai-runtime = { path = "../_shared/runtime", editable = true }
deployai-llm-provider-py = { path = "../../packages/llm-provider-py", editable = true }

[dependency-groups]
dev = [
  "ruff>=0.7.4",
  "mypy>=1.13.0",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.28.1",
  # Story 1.8 — integration tests spin up a real pgvector container.
  "testcontainers[postgres]>=4.9.0",
  # psycopg (v3) is the sync driver Alembic uses for integration-test
  # migrations. asyncpg can't run multi-statement DDL in one call, which
  # our CREATE FUNCTION / CREATE TRIGGER blocks need.
  "psycopg[binary]>=3.2.0",
  # Story 1.9 — unit tests for deployai_tenancy.session use in-memory sqlite.
  "aiosqlite>=0.20.0",
  "fakeredis>=2.35.1",
  "moto[s3,sqs]>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/control_plane"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "ASYNC", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = ["control_plane"]

[[tool.mypy.overrides]]
module = ["deployai_authz", "deployai_authz.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["authlib", "authlib.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["ingest", "ingest.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["prometheus_client", "prometheus_client.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "opentelemetry",
  "opentelemetry.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Test both the control-plane tree AND the shared tenancy package's unit
# tests in one invocation (Story 1.9). CI `Smoke` → `uv run pytest` covers
# both surfaces without a second invocation or a workspace-level config.
testpaths = ["tests", "../_shared/tenancy/tests/unit", "../_shared/citation/tests"]
pythonpath = ["src"]
# importlib mode is required because both test trees otherwise collide on
# the `tests.unit.test_*` package namespace — control-plane and tenancy
# both have a `tests/unit/__init__.py`. importlib resolves each test file
# independently by path, so duplicate module names are fine.
addopts = "-m 'not integration and not fuzz' --import-mode=importlib"
markers = [
  "integration: requires a reachable Docker daemon (testcontainers)",
  "fuzz: cross-tenant isolation fuzz harness; opt-in via -m fuzz (Story 1.10)",
]
