[project]
name = "deployai-ingest"
version = "0.0.0"
description = "Ingestion contracts for extraction queue boundary (FR16) and idempotency (FR18)."
requires-python = ">=3.13,<3.14"
dependencies = []

[dependency-groups]
dev = [
  "mypy>=1.13.0",
  "pytest>=8.3.3",
  "ruff>=0.7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingest"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
packages = ["ingest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
