[project]
name = "deployai-master-strategist"
version = "0.0.0"
description = "Master Strategist arbitration, phase proposals, and agent degradation (Epic 6 stories 6-6–6-8)."
requires-python = ">=3.13,<3.14"
dependencies = [
  "deployai-citation",
  "prometheus-client>=0.21.0",
]

[dependency-groups]
dev = [
  "coverage[toml]>=7.6.0",
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/master_strategist"]

[tool.uv.sources]
deployai-citation = { path = "../_shared/citation", editable = true }

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
packages = ["master_strategist"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "../_shared/citation/src"]

[tool.coverage.run]
branch = true
source = ["src/master_strategist"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 0
show_missing = true
skip_empty = true
precision = 1

[[tool.mypy.overrides]]
module = "deployai_citation.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["prometheus_client", "prometheus_client.*"]
ignore_missing_imports = true
