[package]
name = "deployai-edge-agent"
version = "0.0.0"
description = "DeployAI edge-capture agent (FR13, NFR20). Scaffold - no capture logic yet."
authors = ["DeployAI"]
edition = "2021"

[lib]
name = "edge_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
