[package]
name = "deployai-edge-agent"
version = "0.0.0"
description = "DeployAI edge-capture agent (FR13, NFR20). Scaffold - no capture logic yet."
authors = ["DeployAI"]
edition = "2021"

[lib]
name = "edge_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "sign-sparkle-archive"
path = "src/tools/sign_sparkle_archive.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
tsp-ltv = { version = "0.1.0", default-features = false, features = ["tsp"] }
tokio = { version = "1", features = ["rt", "macros"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
