[project]
name = "deployai-checkpointer"
version = "0.0.0"
description = "LangGraph Postgres checkpointer wiring with tenant-scoped thread ids (Epic 4, AR6)."
requires-python = ">=3.13,<3.14"
dependencies = [
  "langgraph-checkpoint-postgres>=2.0.0",
]

[dependency-groups]
dev = [
  "mypy>=1.13.0",
  "ruff>=0.7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deployai_checkpointer"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
packages = ["deployai_checkpointer"]
