[project]
name = "deployai-citation"
version = "0.0.0"
description = "Pydantic citation envelope (FR27) — aligned with @deployai/contracts Zod/JSON Schema."
requires-python = ">=3.13,<3.14"
dependencies = [
  "pydantic>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deployai_citation"]

[tool.hatch.build.targets.sdist]
include = ["src/deployai_citation", "pyproject.toml", "README.md", "tests"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["deployai_citation"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = ["pytest>=8.3.3", "ruff>=0.7.4", "mypy>=1.13.0"]
