[project]
name = "deployai-runtime"
version = "0.0.0"
description = "Epic 5: prompt registry (Jinja2) + phase modulator (shared by agents)."
requires-python = ">=3.13,<3.14"
dependencies = [
  "jinja2>=3.1.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deployai_runtime"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
packages = ["deployai_runtime"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
