[project]
name = "deployai-tenancy"
version = "0.0.0"
description = "Shared tenancy primitives for DeployAI services (TenantScopedSession, @requires_tenant_scope, envelope encryption). Source of truth per architecture §L181-184 (NFR23 three-layer defense)."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "sqlalchemy[asyncio]>=2.0.36",
]

[dependency-groups]
dev = [
  "ruff>=0.7.4",
  "mypy>=1.13.0",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deployai_tenancy"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "ASYNC", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
packages = ["deployai_tenancy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
